[project]
name = "mcp-for-tq"
version = "0.1.0"
description = "TQ MCP Server — 管理项目、课题、定时任务、模拟盘"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.28.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.5.0",
    "fastmcp>=3.4.2",
]

[project.scripts]
mcp-for-tq = "main:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/", "main.py"]

[tool.hatch.build]
artifacts = ["README.md"]
